--- a/clusters/overlays/aws.cluster/components/banner/kustomization.yaml
+++ b/clusters/overlays/aws.cluster/components/banner/kustomization.yaml
@@ -1,5 +1,5 @@
 resources:
-- ../../../../../../components/configs/banner/base
+- ../../../../../components/configs/banner/base
 
 patches:
 - patch: |-
