--- a/clusters/overlays/local.home/components/banner/kustomization.yaml
+++ b/clusters/overlays/local.home/components/banner/kustomization.yaml
@@ -1,14 +1,11 @@
 resources:
-- ../../../../../components/configs/banner/base
+- ../../../../../components/banner/base
 
 patches:
 - patch: |-
     - op: replace
       path: /spec/backgroundColor
-      value: "#FF9900"
-    - op: replace
-      path: /spec/color
-      value: "#252F3E"
+      value: "#0066CC"
   target:
     kind: ConsoleNotification
     name: banner
