--- a/components/banner/base/banner.yaml
+++ b/components/banner/base/banner.yaml
@@ -1,12 +1,12 @@
 apiVersion: console.openshift.io/v1
 kind: ConsoleNotification
 metadata:
-  name: home-banner
+  name: banner
 spec:
   text: "Cluster: ${CLUSTER_NAME}"
   location: BannerTop
   color: '#fff'
-  backgroundColor: '#0066CC'
+  backgroundColor: '#808080'
   link:
     href: https://console.redhat.com/openshift/details/${CLUSTER_ID}
     text: "(${CLUSTER_ID})"
