Refactor bootstrap folder to hold list of apps instead of app-of-app which is coming from ACM policy

--- a/bootstrap/overlays/local.home/kustomization.yaml
+++ b/bootstrap/overlays/local.home/kustomization.yaml
@@ -1,8 +1,25 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-bases:
-- ../../base
+helmCharts:
+- name: argocd-app-of-app
+  version: 0.2.5
+  repo: https://gnunn-gitops.github.io/helm-charts
+  valuesFile: values.yaml
+  namespace: openshift-gitops
+  releaseName: cluster-config-bootstrap
 
 resources:
-- cluster-config-bootstrap-app.yaml
+- ../local
+
+patches:
+  - target:
+      kind: Application
+      name: compliance-operator
+    patch: |-
+      - op: replace
+        path: /spec/source/path
+        value: 'components/compliance-operator/overlays/cis-compliance-master-only'
+      - op: replace
+        path: /spec/source/repoURL
+        value: 'https://github.com/gnunn-gitops/cluster-config'
