--- a/bootstrap/base/kustomization.yaml
+++ b/bootstrap/base/kustomization.yaml
@@ -1,2 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
+helmCharts:
+- name: argocd-app-of-app
+  version: 0.2.5
+  repo: https://gnunn-gitops.github.io/helm-charts
+  valuesFile: values.yaml
+  namespace: openshift-gitops
+  releaseName: argocd-app-of-app-0.2.5
