--- a/bootstrap/overlays/aws.cluster/kustomization.yaml
+++ b/bootstrap/overlays/aws.cluster/kustomization.yaml
@@ -1,8 +1,25 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-bases:
-- ../../base
+helmCharts:
+- name: argocd-app-of-app
+  version: 0.2.4
+  repo: https://gnunn-gitops.github.io/helm-charts
+  valuesFile: values.yaml
+  namespace: openshift-gitops
+  releaseName: argocd-app-of-app-0.2.4
 
 resources:
-- cluster-config-bootstrap-app.yaml
+- ../../base
+
+patches:
+  - target:
+      kind: Application
+      name: compliance-operator
+    patch: |-
+      - op: replace
+        path: /spec/source/path
+        value: 'components/apps/compliance-operator/overlays/cis-compliance'
+      - op: replace
+        path: /spec/source/repoURL
+        value: 'https://github.com/gnunn-gitops/cluster-config'
