Fail if any part of pipe fails

--- a/components/gitops-operator/base/gitops-operator-cr.yaml
+++ b/components/gitops-operator/base/gitops-operator-cr.yaml
@@ -7,8 +7,8 @@ spec:
   configManagementPlugins: |-
     - name: kustomize-envvar
       generate:
-        command: ["sh", "-c"]
-        args: ["kustomize build --enable-helm . | perl -pe 's{\\$(\\{)?(\\w+)(?(1)\\})}{$ENV{$2} // $&}ge'"]
+        command: ["bash", "-c"]
+        args: ["set -o pipefail && kustomize build --enable-helm . | perl -pe 's{\\$(\\{)?(\\w+)(?(1)\\})}{$ENV{$2} // $&}ge'"]
   resourceTrackingMethod: annotation
   applicationSet: {}
   kustomizeBuildOptions: "--enable-helm"
