Update alertmanager with a slack template from Jonas

--- a/components/alertmanager/base/alertmanager-main-secret.yaml
+++ b/components/alertmanager/base/alertmanager-main-secret.yaml
@@ -13,3 +13,6 @@ spec:
     - secretKey: alertmanager.yaml
       remoteRef:
         key: ALERTMANAGER
+    - secretKey: slacktemplate.yaml
+      remoteRef:
+        key: ALERTMANAGER-SLACK-TEMPLATE
