Change extension for slack template

--- a/components/alertmanager/base/alertmanager-main-secret.yaml
+++ b/components/alertmanager/base/alertmanager-main-secret.yaml
@@ -13,6 +13,6 @@ spec:
     - secretKey: alertmanager.yaml
       remoteRef:
         key: ALERTMANAGER
-    - secretKey: slacktemplate.yaml
+    - secretKey: slacktemplate.tmpl
       remoteRef:
         key: ALERTMANAGER_SLACK_TEMPLATE
