--- a/components/kyverno/base/values.yaml
+++ b/components/kyverno/base/values.yaml
@@ -203,6 +203,7 @@ config:
             - openshift-cluster-samples-operator
             - openshift-cluster-storage-operator
             - openshift-cluster-version
+            - openshift-compliance
             - openshift-config
             - openshift-config-managed
             - openshift-config-operator
