respect resource filters for background scan to exclude OpenShift namespaces

--- a/components/kyverno/base/values.yaml
+++ b/components/kyverno/base/values.yaml
@@ -1,6 +1,10 @@
 apiVersionOverride:
   podDisruptionBudget: policy/v1
 
+features:
+  backgroundScan:
+    skipResourceFilters: false
+
 admissionController:
   replicas: 3
   antiAffinity:
