--- a/components/kyverno/base/values.yaml
+++ b/components/kyverno/base/values.yaml
@@ -48,14 +48,90 @@ config:
     - '[*/*,kube-public,*]'
     - '[*/*,kube-node-lease,*]'
     - '[*/*,openshift,*]'
-    - '[*/*, openshift-*, *]'
-    - '[*/*, openshift-apiserver, *]'
-    - '[*/*, openshift-apiserver-operator, *]'
-    - '[*/*,open-cluster-*,*]'
-    - '[*/*,hive,*]'
-    - '[*/*, multicluster-engine,*]'
+    - '[*/*,cert-manager,*]'
+    - '[*/*,cert-manager-operator,*]'
     - '[*/*,stackrox,*]'
+    - '[*/*,stackrox-secured-cluster-service,*]'
     - '[*/*,rhacs-operator,*]'
+    - '[*/*,multicluster-engine,*]'
+    - '[*/*,open-cluster-management,*]'
+    - '[*/*,open-cluster-management-hub,*]'
+    - '[*/*,open-cluster-management-observability,*]'
+    - '[*/*,open-cluster-management-agent,*]'
+    - '[*/*,open-cluster-management-agent-addon,*]'
+    - '[*/*,open-cluster-management-global-set,*]'
+    - '[*/*,open-cluster-management-hub,*]'
+    - '[*/*,open-cluster-management-hub,*]'
+    - '[*/*,open-cluster-management-hub,*]'
+    - '[*/*,open-cluster-management-hub,*]'
+    - '[*/*,external-secrets,*]'
+    - '[*/*,openshift-apiserver, *]'
+    - '[*/*,openshift-apiserver-operator, *]'
+    - '[*/*,openshift-authentication,*]'
+    - '[*/*,openshift-authentication-operator,*]'
+    - '[*/*,openshift-cloud-controller-manager,*]'
+    - '[*/*,openshift-cloud-controller-manager-operator,*]'
+    - '[*/*,openshift-cloud-credential-operator,*]'
+    - '[*/*,openshift-cloud-network-config-controller,*]'
+    - '[*/*,openshift-cluster-csi-drivers,*]'
+    - '[*/*,openshift-cluster-machine-approver,*]'
+    - '[*/*,openshift-cluster-node-tuning-operator,*]'
+    - '[*/*,openshift-cluster-samples-operator,*]'
+    - '[*/*,openshift-cluster-storage-operator,*]'
+    - '[*/*,openshift-cluster-version,*]'
+    - '[*/*,openshift-compliance,*]'
+    - '[*/*,openshift-config,*]'
+    - '[*/*,openshift-config-managed,*]'
+    - '[*/*,openshift-config-operator,*]'
+    - '[*/*,openshift-console,*]'
+    - '[*/*,openshift-console-operator,*]'
+    - '[*/*,openshift-console-user-settings,*]'
+    - '[*/*,openshift-controller-manager,*]'
+    - '[*/*,openshift-controller-manager-operator,*]'
+    - '[*/*,openshift-dns,*]'
+    - '[*/*,openshift-dns-operator,*]'
+    - '[*/*,openshift-etcd,*]'
+    - '[*/*,openshift-etcd-operator,*]'
+    - '[*/*,openshift-gitops,*]'
+    - '[*/*,openshift-host-network,*]'
+    - '[*/*,openshift-image-registry,*]'
+    - '[*/*,openshift-infra,*]'
+    - '[*/*,openshift-ingress,*]'
+    - '[*/*,openshift-ingress-canary,*]'
+    - '[*/*,openshift-ingress-operator,*]'
+    - '[*/*,openshift-insights,*]'
+    - '[*/*,openshift-kni-infra,*]'
+    - '[*/*,openshift-kube-apiserver,*]'
+    - '[*/*,openshift-kube-apiserver-operator,*]'
+    - '[*/*,openshift-kube-controller-manager,*]'
+    - '[*/*,openshift-kube-controller-manager-operator,*]'
+    - '[*/*,openshift-kube-scheduler,*]'
+    - '[*/*,openshift-kube-scheduler-operator,*]'
+    - '[*/*,openshift-kube-storage-version-migrator,*]'
+    - '[*/*,openshift-kube-storage-version-migrator-operator,*]'
+    - '[*/*,openshift-machine-api,*]'
+    - '[*/*,openshift-machine-config-operator,*]'
+    - '[*/*,openshift-marketplace,*]'
+    - '[*/*,openshift-monitoring,*]'
+    - '[*/*,openshift-multus,*]'
+    - '[*/*,openshift-network-diagnostics,*]'
+    - '[*/*,openshift-network-operator,*]'
+    - '[*/*,openshift-node,*]'
+    - '[*/*,openshift-nutanix-infra,*]'
+    - '[*/*,openshift-oauth-apiserver,*]'
+    - '[*/*,openshift-openstack-infra,*]'
+    - '[*/*,openshift-operator-lifecycle-manager,*]'
+    - '[*/*,openshift-operators,*]'
+    - '[*/*,openshift-ovirt-infra,*]'
+    - '[*/*,openshift-ovn-kubernetes,*]'
+    - '[*/*,openshift-pipelines,*]'
+    - '[*/*,openshift-route-controller-manager,*]'
+    - '[*/*,openshift-service-ca,*]'
+    - '[*/*,openshift-service-ca-operator,*]'
+    - '[*/*,openshift-storage,*]'
+    - '[*/*,openshift-user-workload-monitoring,*]'
+    - '[*/*,openshift-vsphere-infra,*]'
+    - '[*/*,hive,*]'
     - '[*/*,costmanagement-metrics-operator,*]'
     - '[Node,*,*]'
     - '[Node/*,*,*]'
@@ -163,7 +239,6 @@ config:
     - '[ServiceMonitor,{{ if .Values.admissionController.serviceMonitor.namespace }}{{ .Values.admissionController.serviceMonitor.namespace }}{{ else }}{{ template "kyverno.namespace" . }}{{ end }},{{ template "kyverno.reports-controller.name" . }}]'
     - '[Secret,{{ include "kyverno.namespace" . }},{{ template "kyverno.admission-controller.serviceName" . }}.{{ template "kyverno.namespace" . }}.svc.*]'
     - '[Secret,{{ include "kyverno.namespace" . }},{{ template "kyverno.cleanup-controller.name" . }}.{{ template "kyverno.namespace" . }}.svc.*]'
-
   webhooks:
     # Exclude namespaces
     - namespaceSelector:
