--- a/components/kyverno/overlays/policies/application-prevent-default-project.yaml
+++ b/components/kyverno/overlays/policies/application-prevent-default-project.yaml
@@ -15,7 +15,7 @@ metadata:
 spec:
   validationFailureAction: audit
   failurePolicy: Ignore
-  background: true
+  background: false
   rules:
     - name: default-project
       match:
