--- a/components/kyverno/overlays/policies/require-requests-limits-policy.yaml
+++ b/components/kyverno/overlays/policies/require-requests-limits-policy.yaml
@@ -17,7 +17,7 @@ metadata:
 spec:
   validationFailureAction: audit
   failurePolicy: Ignore
-  background: true
+  background: false
   rules:
   - name: validate-resources
     match:
