--- a/components/kyverno/overlays/policies/validate-probes-policy.yaml
+++ b/components/kyverno/overlays/policies/validate-probes-policy.yaml
@@ -19,7 +19,7 @@ metadata:
 spec:
   validationFailureAction: audit
   failurePolicy: Ignore
-  background: true
+  background: false
   rules:
   - name: validate-livenessProbe-readinessProbe
     match:
