--- a/components/kyverno/overlays/policies/check-deprecated-apis.yaml
+++ b/components/kyverno/overlays/policies/check-deprecated-apis.yaml
@@ -13,11 +13,11 @@ metadata:
       As a best practice, older API versions should be replaced with newer versions.
       This policy validates for APIs that are deprecated or scheduled for removal.
       Note that checking for some of these resources may require modifying the Kyverno
-      ConfigMap to remove filters.      
+      ConfigMap to remove filters.
 spec:
   validationFailureAction: audit
   failurePolicy: Ignore
-  background: true
+  background: false
   rules:
   - name: validate-v1-22-removals
     match:
@@ -65,7 +65,7 @@ spec:
     validate:
       message: >-
         {{ request.object.apiVersion }}/{{ request.object.kind }} is deprecated and will be removed in v1.22.
-        See: https://kubernetes.io/docs/reference/using-api/deprecation-guide/        
+        See: https://kubernetes.io/docs/reference/using-api/deprecation-guide/
       deny: {}
   - name: validate-v1-25-removals
     match:
@@ -90,5 +90,5 @@ spec:
     validate:
       message: >-
         {{ request.object.apiVersion }}/{{ request.object.kind }} is deprecated and will be removed in v1.25.
-        See: https://kubernetes.io/docs/reference/using-api/deprecation-guide/        
+        See: https://kubernetes.io/docs/reference/using-api/deprecation-guide/
       deny: {}
