--- a/components/kyverno/overlays/policies/check-openshift-deprecated-apis.yaml
+++ b/components/kyverno/overlays/policies/check-openshift-deprecated-apis.yaml
@@ -15,11 +15,11 @@ metadata:
       As a best practice, older API versions should be replaced with newer versions.
       This policy validates for APIs that are deprecated or scheduled for removal.
       Note that checking for some of these resources may require modifying the Kyverno
-      ConfigMap to remove filters.            
+      ConfigMap to remove filters.
 spec:
   validationFailureAction: enforce
   failurePolicy: Ignore
-  background: true
+  background: false
   rules:
   - name: check-deprecated-apis
     match:
@@ -34,4 +34,3 @@ spec:
       message: >-
                 {{ request.object.apiVersion }}/{{ request.object.kind }} is deprecated.
       deny: {}
-
