--- a/components/kyverno/overlays/policies/disallow-anyuid-scc-policy.yaml
+++ b/components/kyverno/overlays/policies/disallow-anyuid-scc-policy.yaml
@@ -15,7 +15,7 @@ metadata:
 spec:
   validationFailureAction: audit
   failurePolicy: Ignore
-  background: true
+  background: false
   rules:
   - name: check-security-context-constraint
     match:
