--- a/components/kyverno/overlays/policies/require-tls-routes.yaml
+++ b/components/kyverno/overlays/policies/require-tls-routes.yaml
@@ -15,7 +15,7 @@ metadata:
 spec:
   validationFailureAction: audit
   failurePolicy: Ignore
-  background: true
+  background: false
   rules:
     - name: require-tls-routes
       match:
