--- a/bootstrap/overlays/local.hub/values.yaml
+++ b/bootstrap/overlays/local.hub/values.yaml
@@ -62,7 +62,7 @@ applications:
 
   # Disable while we work this out
   nmstate:
-    enabled: true
+    enabled: false
     source:
       path: clusters/overlays/local.hub/components/nmstate
 
