--- a/clusters/overlays/local.hub/components/nmstate/node-network-configuration-policy.yaml
+++ b/clusters/overlays/local.hub/components/nmstate/node-network-configuration-policy.yaml
@@ -7,21 +7,62 @@ metadata:
 spec:
   desiredState:
     interfaces:
-    - name: enp4s0
-      state: up
-      type: ethernet
-      ipv4:
-        enabled: true
     - name: enp0s31f6
-      state: up
+      state: absent
       type: ethernet
       ipv4:
         dhcp: true
         enabled: true
         auto-dns: true
-    routes:
-      config:
-        - destination: 0.0.0.0/0
-          next-hop-address: 192.168.1.1
-          next-hop-interface: enp4s0
-          table-id: 254
+
+    # interfaces:
+    #   - name: bond0
+    #     description: Bond with ports enp4s0 and enp0s31f6
+    #     type: bond
+    #     state: up
+    #     copy-mac-from: enp4s0
+    #     ipv4:
+    #       dhcp: false
+    #       enabled: true
+    #     link-aggregation:
+    #       mode: active-backup
+    #       options:
+    #         miimon: '140'
+    #       port:
+    #       - enp4s0
+    #       - enp0s31f6
+    #     mtu: 1450
+    #   - name: br1
+    #     description: Linux bridge with bond0 as a port
+    #     type: linux-bridge
+    #     state: up
+    #     mtu: 9000
+    #     ipv4:
+    #       enabled: false
+    #     bridge:
+    #       options:
+    #         stp:
+    #           enabled: false
+    #       port:
+    #       - name: bond0
+
+    # interfaces:
+    # - name: enp4s0
+    #   state: up
+    #   type: ethernet
+    #   ipv4:
+    #     dhcp: false
+    #     enabled: true
+    # - name: enp0s31f6
+    #   state: up
+    #   type: ethernet
+    #   ipv4:
+    #     dhcp: true
+    #     enabled: true
+    #     auto-dns: true
+    # routes:
+    #   config:
+    #     - destination: 0.0.0.0/0
+    #       next-hop-address: 192.168.1.1
+    #       next-hop-interface: enp4s0
+    #       table-id: 254
