--- a/components/kyverno/base/values.yaml
+++ b/components/kyverno/base/values.yaml
@@ -21,6 +21,12 @@ reportsController:
   antiAffinity:
     # anti-affinity won't work on SNO
     enabled: false
+  resources:
+    limits:
+      memory: 256Mi
+    requests:
+      cpu: 100m
+      memory: 128Mi
 
 crds:
   install: true
