--- a/clusters/overlays/local.hub/components/consolelinks/acs-consolelink.yaml
+++ b/clusters/overlays/local.hub/components/consolelinks/acs-consolelink.yaml
@@ -7,5 +7,5 @@ spec:
   location: ApplicationMenu
   text: Advanced Cluster Security
   applicationMenu:
-    section: Red Hat applications
+    section: Red Hat Applications
     imageURL: https://central-stackrox.apps.hub.ocplab.com/static/media/rh-favicon.0110fdfc5cab55416acf.ico
