Add cpu limit to report controller because it chews up CPU on SNO boot

--- a/components/kyverno/base/values.yaml
+++ b/components/kyverno/base/values.yaml
@@ -36,6 +36,7 @@ reportsController:
   resources:
     limits:
       memory: 256Mi
+      cpu: 4000m
     requests:
       cpu: 100m
       memory: 128Mi
