Switch to audit

--- a/components/kyverno/overlays/policies/annotate-route-argo-external-link.yaml
+++ b/components/kyverno/overlays/policies/annotate-route-argo-external-link.yaml
@@ -12,7 +12,7 @@ metadata:
       This policy adds an annotation to a route that will cause the Argo CD UI
       to display an icon representing a clickable link for the route.
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: audit
   rules:
   - name: add-annotations-for-https
     match:
