Fix consolelinks to point to hub

--- a/clusters/overlays/local.home/components/consolelinks/nexus-consolelink.yaml
+++ b/clusters/overlays/local.home/components/consolelinks/nexus-consolelink.yaml
@@ -3,9 +3,9 @@ kind: ConsoleLink
 metadata:
   name: nexus
 spec:
-  href: 'https://nexus-dev-tools.apps.home.ocplab.com'
+  href: 'https://nexus-dev-tools.apps.hub.ocplab.com'
   location: ApplicationMenu
   text: Nexus
   applicationMenu:
     section: Tools
-    imageURL: https://nexus-dev-tools.apps.home.ocplab.com/favicon.png
+    imageURL: https://nexus-dev-tools.apps.hub.ocplab.com/favicon.png
