--- a/clusters/overlays/local.home/components/consolelinks/sonarqube-consolelink.yaml
+++ b/clusters/overlays/local.home/components/consolelinks/sonarqube-consolelink.yaml
@@ -3,9 +3,9 @@ kind: ConsoleLink
 metadata:
   name: sonarqube
 spec:
-  href: 'https://sonarqube-dev-tools.apps.home.ocplab.com'
+  href: 'https://sonarqube-dev-tools.apps.hub.ocplab.com'
   location: ApplicationMenu
   text: SonarQube
   applicationMenu:
     section: Tools
-    imageURL: https://sonarqube-dev-tools.apps.home.ocplab.com/favicon.ico
+    imageURL: https://sonarqube-dev-tools.apps.hub.ocplab.com/favicon.ico
