--- a/clusters/overlays/local.home/components/cost-management-operator/kustomization.yaml
+++ b/clusters/overlays/local.home/components/cost-management-operator/kustomization.yaml
@@ -3,8 +3,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 
 namespace: costmanagement-metrics-operator
 
-bases:
-- https://github.com/redhat-cop/gitops-catalog/cost-management-operator/overlays/aggregate
+resources:
+  - https://github.com/redhat-cop/gitops-catalog/cost-management-operator/overlays/aggregate
 
 patchesJson6902:
   - path: patch-source-and-name.yaml
