--- a/clusters/overlays/local.home/components/lvm-operator/kustomization.yaml
+++ b/clusters/overlays/local.home/components/lvm-operator/kustomization.yaml
@@ -1,5 +1,8 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
 resources:
-- ../../../../../components/lvm-operator/base
+  - ../../../../../components/lvm-operator/base
 
 patches:
   - patch: |-
