--- a/clusters/overlays/local.home/components/node-config/kustomization.yaml
+++ b/clusters/overlays/local.home/components/node-config/kustomization.yaml
@@ -1,6 +1,9 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
 resources:
-- set-max-pods.yaml
-- ../../../../../components/wake-on-lan/base
+  - set-max-pods.yaml
+  - ../../../../../components/wake-on-lan/base
 
 patches:
   - patch: |
