--- a/components/certificates/base/kustomization.yaml
+++ b/components/certificates/base/kustomization.yaml
@@ -1,5 +1,8 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
 resources:
-- openshift-api-certificate.yaml
-- openshift-wildcard-certificate.yaml
-- apiserver.yaml
-- ingresscontroller.yaml
+  - openshift-api-certificate.yaml
+  - openshift-wildcard-certificate.yaml
+  - apiserver.yaml
+  - ingresscontroller.yaml
