--- a/components/loki/operator/cluster-logging/base/namespace.yaml
+++ b/components/loki/operator/cluster-logging/base/namespace.yaml
@@ -2,5 +2,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
-      openshift.io/cluster-monitoring: 'true'
+    openshift.io/cluster-monitoring: "true"
   name: openshift-logging
