--- a/clusters/overlays/aws.cluster/components/cost-management-operator/kustomization.yaml
+++ b/clusters/overlays/aws.cluster/components/cost-management-operator/kustomization.yaml
@@ -1,8 +1,8 @@
 kind: Kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 
-bases:
-- github.com/redhat-cop/gitops-catalog/cost-management-operator/overlays/default
+resources:
+  - https://github.com/redhat-cop/gitops-catalog/cost-management-operator/overlays/aggregate
 
 patchesJson6902:
   - path: patch-source-and-name.yaml
