--- a/bootstrap/overlays/aws.cluster/values.yaml
+++ b/bootstrap/overlays/aws.cluster/values.yaml
@@ -10,6 +10,8 @@ default:
     source:
       repoURL: https://github.com/gnunn-gitops/cluster-config.git
       targetRevision: HEAD
+    labels:
+      app-source: aws.cluster
 
 applications:
 
