Add some labels for app-source and rename rhdps cluster

--- a/bootstrap/base/values.yaml
+++ b/bootstrap/base/values.yaml
@@ -11,7 +11,7 @@ default:
       repoURL: https://github.com/gnunn-gitops/cluster-config.git
       targetRevision: HEAD
     labels:
-      app-group: base
+      app-source: base
 
 projects:
 
