--- a/bootstrap/base/values.yaml
+++ b/bootstrap/base/values.yaml
@@ -10,8 +10,6 @@ default:
     source:
       repoURL: https://github.com/gnunn-gitops/cluster-config.git
       targetRevision: HEAD
-    labels:
-      app-source: base
 
 projects:
 
@@ -41,6 +39,9 @@ applications:
     annotations:
       argocd.argoproj.io/compare-options: IgnoreExtraneous
       argocd.argoproj.io/sync-wave: '21'
+    labels:
+      app-source: base
+      repo: cop
     destination:
       namespace: openshift-compliance
     source:
@@ -52,6 +53,9 @@ applications:
     annotations:
       argocd.argoproj.io/compare-options: IgnoreExtraneous
       argocd.argoproj.io/sync-wave: '21'
+    labels:
+      app-source: base
+      repo: cop
     destination:
       namespace: openshift-operators
     source:
