--- a/bootstrap/overlays/local.hub/values.yaml
+++ b/bootstrap/overlays/local.hub/values.yaml
@@ -136,6 +136,7 @@ applications:
         maxDuration: 3m
 
   kyverno-acm:
+    enabled: false
     annotations:
       argocd.argoproj.io/compare-options: IgnoreExtraneous
       argocd.argoproj.io/sync-wave: '21'
