Update namespace destination for odf-instance

--- a/bootstrap/overlays/local.hub/values.yaml
+++ b/bootstrap/overlays/local.hub/values.yaml
@@ -22,6 +22,8 @@ applications:
   odf-instance:
     annotations:
       argocd.argoproj.io/sync-wave: '2'
+    destination:
+      namespace: openshift-storage
     source:
       path: components/odf-operator/instance/base
 
