--- a/components/gitops-operator/base/kustomization.yaml
+++ b/components/gitops-operator/base/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+- setenv-cmp-plugin-cm.yaml
 - argocd-external-secret.yaml
 - create-pipeline-local-user-job.yaml
 - gitops-operator-cr.yaml
