--- a/components/gitops-operator/base/gitops-operator-cr.yaml
+++ b/components/gitops-operator/base/gitops-operator-cr.yaml
@@ -155,29 +155,9 @@ spec:
         hs.status = "Progressing"
         hs.message = "Waiting for Build to complete"
         return hs
-    # - kind: PersistentVolumeClaim
-    #   check: |
-    #     hs = {}
-    #     if obj.status ~= nil then
-    #       if obj.status.phase ~= nil then
-    #         if obj.status.phase == "Pending" then
-    #           hs.status = "Healthy"
-    #           hs.message = obj.status.phase
-    #           return hs
-    #         end
-    #         if obj.status.phase == "Bound" then
-    #           hs.status = "Healthy"
-    #           hs.message = obj.status.phase
-    #           return hs
-    #         end
-    #       end
-    #     end
-    #     hs.status = "Progressing"
-    #     hs.message = "Waiting for PVC"
-    #     return hs
-  resourceCustomizations: |
-    PersistentVolumeClaim:
-      health.lua: |
+    - kind: PersistentVolumeClaim
+      group: ""
+      check: |
         hs = {}
         if obj.status ~= nil then
           if obj.status.phase ~= nil then
@@ -194,7 +174,7 @@ spec:
           end
         end
         hs.status = "Progressing"
-        hs.message = "Waiting for certificate"
+        hs.message = "Waiting for PVC"
         return hs
   resourceIgnoreDifferences:
     resourceIdentifiers:
