--- a/components/gitops-operator/base/gitops-operator-cr.yaml
+++ b/components/gitops-operator/base/gitops-operator-cr.yaml
@@ -8,6 +8,26 @@ spec:
   kustomizeBuildOptions: "--enable-helm"
   notifications:
     enabled: true
+  extraConfig:
+    resource.customizations.health.PersistentVolumeClaim: |
+      hs = {}
+      if obj.status ~= nil then
+        if obj.status.phase ~= nil then
+          if obj.status.phase == "Pending" then
+            hs.status = "Healthy"
+            hs.message = obj.status.phase
+            return hs
+          end
+          if obj.status.phase == "Bound" then
+            hs.status = "Healthy"
+            hs.message = obj.status.phase
+            return hs
+          end
+        end
+      end
+      hs.status = "Progressing"
+      hs.message = "Waiting for PVC"
+      return hs
   repo:
     sidecarContainers:
       - name: setenv-plugin
@@ -154,26 +174,26 @@ spec:
         hs.status = "Progressing"
         hs.message = "Waiting for Build to complete"
         return hs
-    - kind: PersistentVolumeClaim
-      check: |
-        hs = {}
-        if obj.status ~= nil then
-          if obj.status.phase ~= nil then
-            if obj.status.phase == "Pending" then
-              hs.status = "Healthy"
-              hs.message = obj.status.phase
-              return hs
-            end
-            if obj.status.phase == "Bound" then
-              hs.status = "Healthy"
-              hs.message = obj.status.phase
-              return hs
-            end
-          end
-        end
-        hs.status = "Progressing"
-        hs.message = "Waiting for PVC"
-        return hs
+    # - kind: PersistentVolumeClaim
+    #   check: |
+    #     hs = {}
+    #     if obj.status ~= nil then
+    #       if obj.status.phase ~= nil then
+    #         if obj.status.phase == "Pending" then
+    #           hs.status = "Healthy"
+    #           hs.message = obj.status.phase
+    #           return hs
+    #         end
+    #         if obj.status.phase == "Bound" then
+    #           hs.status = "Healthy"
+    #           hs.message = obj.status.phase
+    #           return hs
+    #         end
+    #       end
+    #     end
+    #     hs.status = "Progressing"
+    #     hs.message = "Waiting for PVC"
+    #     return hs
   resourceIgnoreDifferences:
     resourceIdentifiers:
       - group: route.openshift.io
