Update to new helm chart and demo commit pinning

--- a/bootstrap/overlays/local.home/values.yaml
+++ b/bootstrap/overlays/local.home/values.yaml
@@ -4,6 +4,9 @@ default:
     enableAutoSync: true
     autoSyncPrune: false
     project: cluster-config
+    labels:
+      app-source: local.home
+      repo: cluster-config
     destination:
       namespace: openshift-gitops
       server: https://kubernetes.default.svc
