--- a/bootstrap/base/values.yaml
+++ b/bootstrap/base/values.yaml
@@ -4,6 +4,9 @@ default:
     enableAutoSync: true
     autoSyncPrune: false
     project: cluster-config
+    labels:
+      app-source: base
+      repo: cluster-config
     destination:
       namespace: openshift-gitops
       server: https://kubernetes.default.svc
@@ -22,9 +25,7 @@ projects:
     sourceRepos:
     - https://github.com/gnunn-gitops/cluster-config
     - https://github.com/redhat-cop/gitops-catalog
-    - https://github.com/gnunn1/gitops-catalog
     - https://github.com/gnunn-gitops/acm-hub-bootstrap
-    - https://github.com/gnunn1/dev-console-plugin
     destinations: |
       - namespace: '*'
         server: https://kubernetes.default.svc
@@ -40,8 +41,7 @@ applications:
       argocd.argoproj.io/compare-options: IgnoreExtraneous
       argocd.argoproj.io/sync-wave: '21'
     labels:
-      app-source: base
-      repo: cop
+      repo: gitops-catalog
     destination:
       namespace: openshift-compliance
     source:
@@ -54,8 +54,7 @@ applications:
       argocd.argoproj.io/compare-options: IgnoreExtraneous
       argocd.argoproj.io/sync-wave: '21'
     labels:
-      app-source: base
-      repo: cop
+      repo: gitops-catalog
     destination:
       namespace: openshift-operators
     source:
