--- a/bootstrap/overlays/local.hub/values.yaml
+++ b/bootstrap/overlays/local.hub/values.yaml
@@ -4,6 +4,9 @@ default:
     enableAutoSync: true
     autoSyncPrune: false
     project: cluster-config
+    labels:
+      app-source: local.hub
+      repo: cluster-config
     destination:
       namespace: openshift-gitops
       server: https://kubernetes.default.svc
@@ -38,6 +41,8 @@ applications:
   acm-hub:
     annotations:
       argocd.argoproj.io/sync-wave: '21'
+    labels:
+      repo: acm-hub-bootstrap
     destinations:
       namespace: open-cluster-management
     source:
@@ -47,6 +52,8 @@ applications:
   acm-observability:
     annotations:
       argocd.argoproj.io/sync-wave: '31'
+    labels:
+      repo: acm-hub-bootstrap
     destinations:
       namespace: open-cluster-management-observability
     source:
@@ -56,6 +63,8 @@ applications:
   acm-policies:
     annotations:
       argocd.argoproj.io/sync-wave: '31'
+    labels:
+      repo: acm-hub-bootstrap
     destinations:
       namespace: acm-policies
     source:
