--- a/bootstrap/overlays/local.hub/values.yaml
+++ b/bootstrap/overlays/local.hub/values.yaml
@@ -12,7 +12,7 @@ default:
       server: https://kubernetes.default.svc
     source:
       repoURL: https://github.com/gnunn-gitops/cluster-config.git
-      targetRevision: 986408a02409a79b587eb26681ae7aeabca9008c
+      targetRevision: HEAD
 
 applications:
 
@@ -48,7 +48,6 @@ applications:
     source:
       repoURL: https://github.com/gnunn-gitops/acm-hub-bootstrap.git
       path: components/apps/acm/overlays/hub
-      targetRevision: 840cfd74dcdc4828c1d0dd85ae01a16a405a8589
 
   acm-observability:
     annotations:
@@ -60,7 +59,6 @@ applications:
     source:
       repoURL: https://github.com/gnunn-gitops/acm-hub-bootstrap.git
       path: components/apps/acm/overlays/observability
-      targetRevision: 840cfd74dcdc4828c1d0dd85ae01a16a405a8589
 
   acm-policies:
     annotations:
@@ -72,7 +70,6 @@ applications:
     source:
       repoURL: https://github.com/gnunn-gitops/acm-hub-bootstrap.git
       path: bootstrap/policies/overlays/default
-      targetRevision: 840cfd74dcdc4828c1d0dd85ae01a16a405a8589
 
   # Disable while we work this out
   nmstate:
